--- a/计算机网络.md
+++ b/计算机网络.md
@@ -14,3 +14,21 @@
 - OSPF原理（类似抄作业）：他就是要建立邻接表，然后通过洪泛，然后每个路由器都会有自己的数据库，这样之后才开始使用dijistra计算最短路。他还支持CIDR。
 - GBP原理：待
 ---
+# 学习内容
+
+- BGP原理：BGP分为iBGP和eBGP，BGP的报文是：<CIDR地址块、到达目的网络的路径向量、下一跳的路由器>，一般的，在iBGP传播报文的时候下一跳地址不变的，因为AS内的路由器知道怎么出去的。
+- BGP路由选择：优先选择默认配置的、优先选择到达目的地址跳数最小的、如果是OSPF优先选择路径权值和最小的，如果是RIP的话，选择跳数最小的、热土豆法，尽可能把报文往AS外传播、优先选择BGP标识符最小的。
+- BGP四种报文：打开报文、更新报文、保活报文、通知报文
+- IP多播：网络电视这种类型的，也可以类比成QQ群，在路由器与主机之间采用IGMP协议，在路由器和路由器之间采用多播路由协议。
+- 移动IP：就是每个设备都会有唯一的永久IP地址，如果在本地的话，就有本地代理为它服务。在外地的话，别人想要给外地的人发数据的时候，首先是发到本地代理上，然后采用IP-in-IP套娃计数把IP数据报发送到外地代理上，但某个人到外地外地路由器要向本地代理登记，冰火的临时转交地址。反过来的话不需要走本地代理。
+- 网络层设备：路由器，讲解了路由器的功能是：路由选择和分组转发。这里说到路由表和转发表从本质上来说是不一样的。
+- 传输层提供的服务：传输层提供端口，不同协议的端口可以复用，不同设备的端口可以复用，0~1023的端口是特定用途。
+- UDP数据报：UDP是不可靠的、无连接的。它的组成是16B，目的端口、本地端口、UDP长度、校验和。UDP数据报是不可分割的。
+- UDP校验：UDP校验是把16bit分为一组，然后加起来然后再把最后加起来的结果取反这样一起发过去。如果接收方收到的和算为1则没问题。这里要注意如果最高位溢出要放回最低位加起来。（IP的首部校验和用的也是这个）
+- TCP报文段：TCP数据报比较复杂，TCP数据报没有TCP数据部分长度的字段。因为它可以通过IP数据报来算，因为TCP数据报是封装在IP数据报里面的。TCP的首部是20B~60B。他有序号、ack_seq（确认号）
+- TCP连接与释放：TCP的3次握手和4次挥手，要特别知道ACK、FIN、SYN。ACK为1才说明ack_seq有效，FIN只有挥手1和挥手3才有效。ACK只有握手1是0，SYN是只有握手1和握手2才为1。注意序号的占用，只有握手1、握手2占一个序号，还有就是挥手1和挥手3都占1个序号虽然它们传数据。当挥手1开始的时候，此时服务端还可以给客户端发送消息。
+- TCP可靠连接、流量控制：可靠控制就是每次发送一个TCP数据报，那么服务端必须要回复对应的ACK，这个ACK报文可以携带数据。然后客户端和服务端都有接收缓冲区和发送缓冲区。流量控制是采用滑动窗口实现的，注意窗口的大小是己方缓冲区还剩的空间。
+- TCP拥塞控制：慢开始、快重传：慢开始就是每次返回一个ACK那么窗口的大小就+1,到达拥塞避免的时候就如果返回多个ACK就只+1。然后就是如果遇到网络拥堵的情况，此时立马就进入慢开始，然后拥塞控制的阈值也除2。然后有个快重传，就是为了解决传输数据中途掉包得等很久的情况。
+- 应用层：采用C/S或者P2P。
+- WWW：使用HTML实现的，通过域名解析。了解URL。
+- HTTP：HTTP分为HTTP/1.0 HTTP/1.1，然后存在HTTP协议的工作方式是：非持续连接和持续连接，HTTP/1.0默认是非持续连接。持续连接又分为流水线和非流水线，流水线可以多次访问多个HTTP请求。HTTP报文分为发送报文和响应报文，发送报文往往有方法（比如GET方法和POST、HEAD方法），HEAD比较方便客户端了解服务端是否存在该资源）。响应报文会有状态码。然后是Cookie，就是网页对用户提供个性化的服务，让服务器认识用户。
